istioKubernetes/ingressconfig.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: welcome-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:   
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    # curl -I -HHost:welcome.example.com http://$INGRESS_HOST:$INGRESS_PORT/v1/welcome

---
# istio gateway does not provide rules for traffic routing as a kubernetes would do. So routing roules need to be applied via a virtual service

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: welcome-vs
spec:
  hosts: # adress used by client to aconnect to service
  - "*" 
  gateways:
  - welcome-gateway
  http:
  - match:
    - uri:
        exact: /v1/welcome
    - uri:
        exact: /v2/welcome
    route:
    - destination:
        host: welcomeservice
        port:
          number: 8081
